package dev.orion.util.enums;

public enum UserStatus {
    CONNECTED, AVAILABLE, DISCONNECTED
}
