@startuml ORM
  title "ORM diagram"
  ' ------ CLASS DECLARATION ------
  class Activity {
    +Uuid uuid
    +Document document
    +User[] userList
    +User createdBy
    +Boolean isActive
    +DateTime lastUpdateDateTime
    +DateTime createdDateTime
  }

  class Document {
    +Long id
    +String content
    +Activity activity
    +DateTime lastUpdateDateTime
    +DateTime createdDateTime
  }

  class DocumentHistory {
    +Long id
    +String content
    +Document document
    +ActivityHistory activity
    +User userExecutor
    +DateTime lastUpdateDateTime
    +DateTime createdDateTime
  }

  class ActivityHistory {
    +Long id
    +Activity activity
    +UserHistory[] userListSnapshot
    +DateTime lastUpdateDateTime
    +DateTime createdDateTime
  }

  class UserHistory {
    +Long id
    +Activity ActivityHistory
    +User User
    +UserStatus userStatus
    +DateTime lastUpdateDateTime
    +DateTime createdDateTime
  }

  class User {
    +Uuid uuid
    +UserStatus userStatus
    +String externalId
    +DateTime lastUpdateDateTime
    +DateTime createdDateTime
  }

  enum UserStatus {
    CONNECTED
    AVAILABLE
    DISCONNECTED
  }
  ' ------ END CLASS DECLARATION ------
  ' -----------------------------------
  ' ------ RELATION DECLARATIONS ------
  User -- UserStatus

  Activity "1" o-- "*"User
  Activity "1" *-- "1" Document

  ActivityHistory "*" o-- "1" Activity
  ActivityHistory "1" o-- "*" UserHistory

  DocumentHistory "*" o-- "1" Document
  DocumentHistory "*" o-- "1" User
  DocumentHistory "*" o-- "1" ActivityHistory
  DocumentHistory "*" O-- "1" DocumentHistory

  UserHistory "*" o-- "1" User
  UserHistory -- UserStatus

  ' ------ END RELATION DECLARATIONS ------
@enduml